# OpenSesame

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
boot/: Cargo.toml
boot/src/: boot.rs  global.rs  hook.rs  main.rs  mapper.rs  utils.rs  windows.rs
common/: Cargo.toml
common/src/: lib.rs
driver/: Cargo.toml  Makefile.toml
driver/.cargo/: config  config.toml
driver/src/: lib.rs
driver/src/include/: mod.rs  ntddk.rs  types.rs
